# tidesh

./: .clang-format  .clang-tidy  .gitignore  Doxyfile  LICENSE  Makefile  README.md
.github/workflows/: build.yml  cd.yml  test.yml
bindings/python/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
bindings/python/examples/: env-vars.py  hello-world.py
bindings/python/tests/: test_tidesh.py
bindings/python/tidesh/: __info__.py  __init__.py  _tidesh.c  ast.py  constants.py  exceptions.py  lexer.py  session.py  state.py  tidesh.c  tidesh.cdef  tokens.py
include/: ast.h  builtin.h  dirstack.h  environ.h  execute.h  expand.h  feature-flags.h  features.h  history.h  hooks.h  jobs.h  lexer.h  prompt.h  session.h
include/builtins/: alias.h  bg.h  cd.h  clear.h  eval.h  exit.h  export.h  features.h  fg.h  help.h  history.h  hooks.h  info.h  jobs.h  popd.h  printenv.h  pushd.h  pwd.h  source.h  terminal.h  test.h  type.h  unalias.h  which.h
include/commands/: myarp.h  mydelexe.h  mydump.h  myenv.h  myexe.h  myinfo.h  mylof.h  mymaps.h  mynetstat.h  myps.h  mypstree.h
include/data/: array.h  dynamic.h  files.h  trie.h  utf8.h
include/expansions/: aliases.h  braces.h  filenames.h  tildes.h  variables.h
include/prompt/: ansi.h  completion.h  cursor.h  debug.h  keyboard.h  terminal.h
src/: ast.c  builtin.c  dirstack.c  environ.c  execute.c  expand.c  features.c  history.c  hooks.c  jobs.c  lexer.c  main.c  prompt.c  session.c
src/builtins/: alias.c  bg.c  cd.c  clear.c  eval.c  exit.c  export.c  features.c  fg.c  help.c  history.c  hooks.c  info.c  jobs.c  popd.c  printenv.c  pushd.c  pwd.c  source.c  terminal.c  test.c  type.c  unalias.c  which.c
src/commands/: myarp.c  mydelexe.c  mydump.c  myenv.c  myexe.c  myinfo.c  mylof.c  mymaps.c  mynetstat.c  myps.c  mypstree.c
src/data/: array.c  dynamic.c  files.c  trie.c  utf8.c
src/expansions/: aliases.c  braces.c  filenames.c  tildes.c  variables.c
src/prompt/: ansi.c  completion.c  cursor.c  debug.c  keyboard.c  terminal.c
tests/: README.md  main.c
tests/builtins/: test_builtins.c  test_source.c  test_test.c  test_type.c
tests/core/: test_dirstack.c  test_environ.c  test_features.c  test_history.c  test_jobs.c  test_session.c
tests/data/: test_array.c  test_dynamic.c  test_trie.c  test_utf8.c
tests/execution/: test_execute.c
tests/integration/: test_integration.c
tests/parsing/: test_ast.c  test_lexer.c
